# snovault

./: .dockerignore  README.md  docker-compose.test-indexer.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py
.circleci/: config.yml
config/pyramid/ini/: base.ini  development.ini  indexer.ini
docker/localstack/: create_localstack.sh
docker/pyramid/: Dockerfile
docker/snoindex/: Dockerfile  requirements.txt
scripts/: embeds.py
scripts/pyramid/: diff-opensearch-mappings.sh  generate-opensearch-mappings.sh  run-create-mapping.sh  run-development.sh  run-indexer-tests.sh  run-indexer.sh  run-indexing-service.sh  run-invalidation-service.sh
src/snovault/: __init__.py  app.py  attachment.py  auditor.py  authentication.py  batchupgrade.py  cache.py  compat.py  connection.py  crud_views.py  dev_servers.py  embed.py  etag.py  feature_flags.py  indexing_views.py  invalidation.py  json_renderer.py  jsongraph.py  jsonld_context.py  local_storage.py  queue.py  resource_views.py  resources.py  schema_graph.py  schema_utils.py  schema_views.py  snowflake_hash.py  storage.py  upgrader.py  util.py
src/snovault/commands/: check_rendering.py  es_index_data.py  generate_mappings.py  jsonld_rdf.py  load_development.py  profile.py
src/snovault/elasticsearch/: __init__.py  cached_views.py  create_mapping.py  es_index_listener.py  esstorage.py  index_views.py  indexer.py  indexer_state.py  indexing_service.py  invalidation_service.py  manage_mappings.py  mpindexer.py  simple_queue.py  transaction_listener.py
src/snovault/remote/: queue.py
src/snovault/services/: indexing.py  invalidation.py
src/snovault/tests/: conftest.py  indexfixtures.py  pyramidfixtures.py  redis_storage_fixture.py  serverfixtures.py  test_cors.py  test_indexing.py  test_schema_utils.py  test_searches_configs.py  test_searches_fields.py  test_snowflake_hash.py  test_utils.py  testappfixtures.py  testing_key.py  testing_upgrader.py  testing_views.py
src/snowflakes/: __init__.py  authorization.py  loadxl.py  memlimit.py  renderers.py  root.py  schema_formats.py  search_views.py  server_defaults.py
src/snowflakes/audit/: item.py
src/snowflakes/commands/: check_rendering.py  create_admin_user.py  deploy.py  es_index_data.py  import_data.py  jsonld_rdf.py  migrate_attachments_aws.py  profile.py  spreadsheet_to_json.py
src/snowflakes/docs/: making_audits.md  schema-changes.md
src/snowflakes/mappings/: README.md  access_key.json  award.json  image.json  lab.json  page.json  register.py  snowball.json  snowflake.json  snowfort.json  testing_bad_accession.json  testing_custom_embed_source.json  testing_custom_embed_target.json  testing_dependencies.json  testing_download.json  testing_link_source.json  testing_link_target.json  testing_post_put_patch.json  user.json  (+3 more)
(+92 files in other folders)
