[metadata]
name = snovault
version = attr: snovault.__version__
description = Snovault Hybrid Object Relational Database Framework
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IGVF-DACC/snovault
project_urls =
    Bug Tracker = https://github.com/IGVF-DACC/snovault/issues

[options]
package_dir =
    = src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires =
    antlr4-python3-runtime==4.9.3
    Pillow==7.0.0
    SQLAlchemy==1.3.13
    WebOb==1.8.6
    WebTest==2.0.35
    bcrypt==3.1.7
    boto3==1.26.27
    botocore==1.29.27
    opensearch-py==2.3.0
    opensearch-dsl==2.1.0
    future==0.18.2
    jsonschema[format]==4.4.0
    lucenequery==0.1
    passlib==1.7.2
    psutil==5.6.7
    psycopg2==2.9.6
    pyramid-localroles==0.1
    pyramid-multiauth==0.9.0
    pyramid-tm==2.4
    pyramid==2.0.1
    pyramid_retry==2.1.1
    python-magic==0.4.15
    pytz==2019.3
    rdflib-jsonld==0.6.0
    rdflib==4.2.2
    redis==3.5.3
    requests==2.27.1
    simplejson==3.17.0
    snovault-index@git+https://github.com/IGVF-DACC/snovault-index.git@v4.0.0
    snovault-search@git+https://github.com/IGVF-DACC/snovault-search.git@v5.1.0
    transaction==3.0.0
    venusian==3.0.0
    zope.interface==5.3.0
    zope.sqlalchemy==1.2

[options.extras_require]
test =
    pytest==5.3.2
    pytest-bdd==3.2.1
    pytest-mock==2.0.0
    selenium==3.141.0
    splinter==0.17.0
    pytest-splinter==2.0.1
    pytest-exact-fixtures==0.3
    pytest-timeout==1.3.4
    pytest-instafail==0.4.2
    pytest-mock==2.0.0
    pytest-cov==2.8.1
    coveralls==3.3.1
snowflakes =
    PasteDeploy==2.1.0
    WSGIProxy2==0.4.6
    humanfriendly==6.1
    pyramid-translogger==0.1
    repoze.debug==1.1
    rfc3987==1.3.8
    rutter==1.0
    subprocess_middleware==0.3
    waitress==1.4.3
    xlrd==1.2.0
    zc.buildout==2.13.2
dev =
    snovault[test]
    snovault[snowflakes]

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    batchupgrade = snovault.batchupgrade:main
    create-mapping = snovault.elasticsearch.create_mapping:main
    manage-mappings = snovault.elasticsearch.manage_mappings:main
    dev-servers = snovault.dev_servers:main
    es-index-listener = snovault.elasticsearch.es_index_listener:main
    load-development = snovault.commands.load_development:main
    generate-mappings = snovault.commands.generate_mappings:main
paste.app_factory =
    main = snowflakes:main
    snowflakes = snowflakes:main
paste.composite_factory =
    indexer = snovault.elasticsearch.es_index_listener:composite
paste.filter_app_factory =
    memlimit = snowflakes.memlimit:filter_app
